--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     </script>
 
 
+  <link rel="icon" href="/favicon.ico" sizes="any" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <link rel="alternate icon" type="image/png" href="/logo.png" />
+  <link rel="manifest" href="/manifest.json" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
