--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
 
   <link rel="icon" href="/favicon.ico" sizes="48x48" />
+  <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="/logo.png" sizes="192x192" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <link rel="alternate icon" type="image/png" href="/logo.png" />
