fix: resolve blank screen and use logo2.png across site

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           "@type": "Organization",
           "name": "Guitariz Studio"
         },
-        "screenshot": "https://guitariz.studio/logo.png",
+        "screenshot": "https://guitariz.studio/logo2.png",
         "offers": {
           "@type": "Offer",
           "price": "0",
@@ -76,10 +76,10 @@
 
 
   <link rel="icon" href="/favicon.ico" sizes="48x48" />
-  <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/logo.png" sizes="192x192" />
+  <link rel="icon" type="image/png" href="/logo2.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/logo2.png" sizes="192x192" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-  <link rel="alternate icon" type="image/png" href="/logo.png" />
+  <link rel="alternate icon" type="image/png" href="/logo2.png" />
   <link rel="manifest" href="/manifest.json" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
