--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:description"
     content="Free Chord AI and music toolkit: Extract chords from any song, use our vocal splitter, and explore scales/fretboards." />
   <meta property="og:url" content="https://guitariz.studio/" />
-  <meta property="og:image" content="https://guitariz.studio/logo2.png" />
+  <meta property="og:image" content="https://guitariz.studio/logo.png" />
   <meta property="og:site_name" content="Guitariz" />
 
   <!-- Twitter Card -->
@@ -24,11 +24,10 @@
   <meta name="twitter:title" content="Guitariz - Chord AI Free & Music Theory Toolkit" />
   <meta name="twitter:description"
     content="Advanced music-forward toolkit: Chord AI free, interactive fretboard, and music theory labs." />
-  <meta name="twitter:image" content="https://guitariz.studio/logo2.png" />
+  <meta name="twitter:image" content="https://guitariz.studio/logo.png" />
 
   <meta name="theme-color" content="#060606" />
   <link rel="canonical" href="https://guitariz.studio/" />
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <link rel="icon" type="image/png" href="/logo.png" />
 
   <!-- Apple PWA tags -->
@@ -36,7 +35,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Guitariz" />
-  <link rel="apple-touch-icon" href="/logo2.png" />
+  <link rel="apple-touch-icon" href="/logo.png" />
 
   <script type="application/ld+json">
       {
@@ -51,7 +50,7 @@
           "@type": "Organization",
           "name": "Guitariz Studio"
         },
-        "screenshot": "https://guitariz.studio/logo2.png",
+        "screenshot": "https://guitariz.studio/logo.png",
         "offers": {
           "@type": "Offer",
           "price": "0",
@@ -66,7 +65,7 @@
       "@type": "Organization",
       "name": "Guitariz Studio",
       "url": "https://guitariz.studio/",
-      "logo": "https://guitariz.studio/logo2.png",
+      "logo": "https://guitariz.studio/logo.png",
       "sameAs": [
         "https://x.com/GuitarizStudio",
         "https://github.com/abhi9vaidya/guitariz"
@@ -76,10 +75,9 @@
 
 
   <link rel="icon" href="/favicon.ico" sizes="48x48" />
-  <link rel="icon" type="image/png" href="/logo2.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="/logo2.png" sizes="192x192" />
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-  <link rel="alternate icon" type="image/png" href="/logo2.png" />
+  <link rel="icon" type="image/png" href="/logo.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="/logo.png" sizes="192x192" />
+  <link rel="alternate icon" type="image/png" href="/logo.png" />
   <link rel="manifest" href="/manifest.json" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
